--- a/recommender.ipynb
+++ b/recommender.ipynb
@@ -4,10 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kakao arena 2nd Competition - \"브런치 사용자를 위한 글 추천 대회\"\n",
+    "## Kakao arena 2nd Competition\n",
+    "# \"브런치 사용자를 위한 글 추천 대회\"\n",
     "### brunch 데이터를 활용해 사용자의 취향에 맞는 글을 예측하는 대회\n",
     "* 공식 홈페이지: https://arena.kakao.com/c/2\n",
-    "* 베이스 코드: https://github.com/kakao-arena/brunch-article-recommendation"
+    "* 베이스 코드: https://github.com/kakao-arena/brunch-article-recommendation\n",
+    "\n",
+    "### BrunchRec \n",
+    "* designed by **datartist**\n",
+    "* 깃헙 주소: https://github.com/jihoo-kim/BrunchRec  "
    ]
   },
   {
