--- a/recommender.ipynb
+++ b/recommender.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,10 +446,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# item-based CF를 위한 item-user matrix 생성\n",
     "def item_user_df_generator(metadata_df, read_raw_df):\n",
     "\n",
     "    # users_read -> 전체 기간 동안 users가 읽은 article의 수 (중복 제거)\n",
@@ -458,7 +459,7 @@
     "    # not_cold_start_users(ncsu) -> 읽은 article의 수가 평균보다 높은 users (평균 41개, 306,222 -> 55,416명)\n",
     "    not_cold_start_users = users_read[users_read['article_id'] > users_read['article_id'].mean()].index.tolist()\n",
     "\n",
-    "    # not_long_tail_items(nlti) -> view가 상위 5%인 article (상위 5% 107건, 643,104 -> 6,424개)\n",
+    "    # not_long_tail_items(nlti) -> view가 상위 1%인 article (상위 1% 491건, 643,104 -> 6,424개)\n",
     "    not_long_tail_items = metadata_df[metadata_df['view'] > metadata_df['view'].quantile(0.99)]['id'].tolist()\n",
     "    \n",
     "    # ncsu와 nlti에 대해서 item-user matrix 생성 (6,424 * 55,416)\n",
@@ -473,10 +474,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# item-based CF 추천\n",
     "def collaborative_filtering(iu_df, file):\n",
     "\n",
     "    if os.path.isfile(file):        \n",
@@ -487,8 +489,8 @@
     "        # Step1: item-user martix에서 item에 대해 cosine similarity 구하기\n",
     "        cosine_array = cosine_similarity(iu_df, iu_df)\n",
     "\n",
-    "        # Step 2: 가장 비슷한 10명 user의 weighted mean을 이용해 predict\n",
-    "        predicted_array = np.zeros(shape=(len(iu_df.values),len(iu_df.values[0])))         \n",
+    "        # Step 2: 가장 비슷한 10개의 item의 weighted mean을 이용해 predict\n",
+    "        predicted_array = np.zeros(shape=(len(iu_df.index),len(iu_df.columns)))         \n",
     "            \n",
     "        for i in range(len(cosine_array)):\n",
     "            top_10 = cosine_array[i].argsort()[-11:][::-1]\n",
@@ -505,7 +507,7 @@
     "        # Step 3: 각 user에 대해 weighted mean이 높은 상위 100개 article을 저장\n",
     "        cf_dic = {}\n",
     "        for i in range(len(iu_predicted.T)):\n",
-    "            cf_dic[iu_df.columns[i]] = iu_df.index[iu_predicted.T[i].argsort()[-101:][::-1]].tolist()\n",
+    "            cf_dic[iu_df.columns[i]] = iu_df.index[iu_predicted.T[i].argsort()[-100:][::-1]].tolist()\n",
     "\n",
     "        with open(file,\"wb\") as fw:\n",
     "            pickle.dump(cf_dic, fw)\n",
@@ -515,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +709,7 @@
     "    print('completed!')\n",
     "    \n",
     "    endTime = time.time() - startTime\n",
-    "    print(endTime)\n",
+    "    print(int(endTime), 'seconds', '=', int(endTime/60), 'minutes')\n",
     "\n",
     "    return recommend_list"
    ]
@@ -728,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -764,11 +766,14 @@
       "preprocessing completed!\n",
       "target_read_article file loaded..\n",
       "preprocessing completed!\n",
+      "target_read_following file loaded..\n",
+      "preprocessing completed!\n",
       "target_read_magazine file loaded..\n",
       "preprocessing completed!\n",
       "target_read_tag file loaded..\n",
       "preprocessing completed!\n",
       "target_interest file loaded..\n",
+      "preprocessing completed!\n",
       "preprocessing completed!\n"
      ]
     }
@@ -814,7 +819,7 @@
    "outputs": [],
    "source": [
     "# dev에 대해 추천할 경우\n",
-    "recommend = recommender(dev_users, dev, metadata, read_raw, 0, 20190222, 20190228, './pickle/popularity_190222_190228', './recommend.txt')"
+    "recommend = recommender(dev_users, dev, metadata, read_raw, 1, 20190222, 20190228, './pickle/popularity_190222_190228', './recommend.txt')"
    ]
   },
   {
