--- a/BrunchRec.ipynb
+++ b/BrunchRec.ipynb
@@ -754,18 +754,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "preprocessing completed!\n",
-      "preprocessing completed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "read_raw = read_raw_dt_preprocessing(read_raw)\n",
     "metadata = metadata_view_preprocessing(metadata, read_raw)"
@@ -780,28 +771,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "preprocessing completed!\n",
-      "target_read_article file loaded..\n",
-      "preprocessing completed!\n",
-      "target_read_following file loaded..\n",
-      "preprocessing completed!\n",
-      "target_read_magazine file loaded..\n",
-      "preprocessing completed!\n",
-      "target_read_tag file loaded..\n",
-      "preprocessing completed!\n",
-      "target_interest file loaded..\n",
-      "preprocessing completed!\n",
-      "preprocessing completed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dev에 대해 추천할 경우\n",
     "dev = target_df_generator(dev_users, users)\n",
@@ -819,14 +791,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # test에 대해 추천할 경우\n",
-    "# test = target_df_generator(test_users, users)\n",
-    "# test = target_read_article(test, read_raw, file='./pickle/test_read_article')\n",
-    "# test = target_read_following(test, './pickle/test_read_following')\n",
-    "# test = target_read_magazine(test, metadata, './pickle/test_read_magazine')\n",
-    "# test = target_read_tag(test, metadata, read_raw, 20190222, 20190228, './pickle/test_read_tag')\n",
-    "# test = target_interest(test, 6, './pickle/test_interest_6')\n",
-    "# test = target_behavior(test)"
+    "# test에 대해 추천할 경우\n",
+    "test = target_df_generator(test_users, users)\n",
+    "test = target_read_article(test, read_raw, file='./pickle/test_read_article')\n",
+    "test = target_read_following(test, './pickle/test_read_following')\n",
+    "test = target_read_magazine(test, metadata, './pickle/test_read_magazine')\n",
+    "test = target_read_tag(test, metadata, read_raw, 20190222, 20190228, './pickle/test_read_tag')\n",
+    "test = target_interest(test, 6, './pickle/test_interest_6')\n",
+    "test = target_behavior(test)"
    ]
   },
   {
@@ -852,8 +824,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # test에 대해 추천할 경우\n",
-    "# recommend = recommender(test_users, test, metadata, read_raw, 0, 20190222, 20190228, './pickle/popularity_190222_190228', './recommend.txt')"
+    "# test에 대해 추천할 경우\n",
+    "recommend = recommender(test_users, test, metadata, read_raw, 1, './pickle/cf_dic', 20190222, 20190228, './pickle/popularity_190222_190228', './recommend.txt')"
    ]
   }
  ],
