--- a/BrunchRec.ipynb
+++ b/BrunchRec.ipynb
@@ -667,7 +667,6 @@
     "    \n",
     "    # candidate -> 이미 본 글이나 추천된 글을 제외하고, view가 평균보다 많은 글\n",
     "    candidate = metadata_df[(metadata_df['id'].isin(already)==False) & (metadata_df['view'] > metadata_df['view'].mean())]\n",
-    "    candidate.index=list(range(len(candidate)))\n",
     "    \n",
     "    # user_interest -> target user의 interest (0 ~ 6개)\n",
     "    user_interest = target_df[target_df['id']== idx]['recent_interest'].values[0][:]\n",
@@ -676,7 +675,7 @@
     "    interest_popularity_id = []\n",
     "    for i in range(len(candidate)):\n",
     "        if len(set(candidate['keyword_list'].values[i]) & set(user_interest)) >= 1:\n",
-    "            interest_popularity_id.append(candidate['id'][i])    \n",
+    "            interest_popularity_id.append(candidate['id'].values[i])    \n",
     "    \n",
     "    # interest가 1개 이상 겹치는 글을 reg_ts순으로 추천하고, 남은 글은 popularity가 높은 순서대로 추천\n",
     "    p_article = candidate[candidate['id'].isin(interest_popularity_id)].sort_values(['reg_ts'],ascending=[False])\n",
