--- a/BrunchRec.ipynb
+++ b/BrunchRec.ipynb
@@ -277,21 +277,25 @@
     "        iteration = 0\n",
     "\n",
     "        for idx in target_df['id'].values.tolist():\n",
-    "            # recent_list- > target user의 recent_list (일정 기간 동안 읽은 글 리스트)\n",
-    "            recent_list = target_df[target_df['id']==idx]['recent'].values[0][:]\n",
-    "            recent_series = pd.Series(recent_list)\n",
-    "\n",
-    "            # f_list -> target user의 following_list (구독작가 리스트)\n",
-    "            f_list = target_df[target_df['id']==idx]['following_list'].values[0][:]  \n",
-    "            for i in range(len(f_list)):\n",
-    "                f_list[i] = f_list[i] + '_'\n",
-    "\n",
     "            # following_frequency -> recent_list 중에서 해당 작가(f_id)의 글의 빈도수\n",
     "            following_frequency = {}\n",
-    "            for f_id in f_list:\n",
-    "                frequency = len(recent_series[recent_series.str.startswith(f_id)].tolist())\n",
-    "                if frequency > 0:\n",
-    "                    following_frequency[f_id[:-1]]=frequency\n",
+    "            \n",
+    "            # recent_list- > target user의 recent_list (일정 기간 동안 읽은 글 리스트)\n",
+    "            recent_list = target_df[target_df['id']==idx]['recent'].values[0][:]\n",
+    "            \n",
+    "            if len(recent_list) > 0:\n",
+    "                recent_series = pd.Series(recent_list)\n",
+    "\n",
+    "                # f_list -> target user의 following_list (구독작가 리스트)\n",
+    "                f_list = target_df[target_df['id']==idx]['following_list'].values[0][:]  \n",
+    "                for i in range(len(f_list)):\n",
+    "                    f_list[i] = f_list[i] + '_'\n",
+    "\n",
+    "                for f_id in f_list:\n",
+    "                    frequency = len(recent_series[recent_series.str.startswith(f_id)].tolist())\n",
+    "                    if frequency > 0:\n",
+    "                        following_frequency[f_id[:-1]]=frequency\n",
+    "                        \n",
     "            target_recent_following.append(following_frequency)\n",
     "\n",
     "            # 진행 상황 표시\n",
@@ -331,7 +335,6 @@
     "\n",
     "        for idx in target_df['id'].values.tolist():\n",
     "            # target user가 읽은 글의 magazine_id 저장\n",
-    "            magazine_list = []\n",
     "            recent_list = target_df[target_df['id']==idx]['recent'].values[0][:]\n",
     "            magazine_list = metadata_df[metadata_df['id'].isin(recent_list)]['magazine_id'].tolist()\n",
     "            \n",
@@ -464,9 +467,12 @@
     "\n",
     "        fr_dic = target_df[target_df['id']==idx]['recent_following'].values[0]\n",
     "        mr_dic = target_df[target_df['id']==idx]['recent_magazine'].values[0]\n",
-    "\n",
-    "        f_ratio = sum(fr_dic.values()) / len(recent_list)\n",
-    "        m_ratio = sum(mr_dic.values()) / len(recent_list)      \n",
+    "        \n",
+    "        f_ratio, m_ratio = 0, 0\n",
+    "        \n",
+    "        if len(recent_list) >= 1:\n",
+    "            f_ratio = sum(fr_dic.values()) / len(recent_list)\n",
+    "            m_ratio = sum(mr_dic.values()) / len(recent_list)      \n",
     "\n",
     "        f_ratio_list.append(round(f_ratio,2))\n",
     "        m_ratio_list.append(round(m_ratio,2))\n",
