--- a/BrunchRec.ipynb
+++ b/BrunchRec.ipynb
@@ -639,17 +639,17 @@
    "outputs": [],
    "source": [
     "# target user가 최근에 읽은 글들에서 자주 나오는 태그를 고려하여 추천\n",
-    "def tag_based_recommend(idx, target_df, metadata_df, r_list, recommended):\n",
+    "def tag_based_recommend(idx, target_df, metadata_df, r_list, recommended, common_num):\n",
     "    \n",
     "    already = r_list + recommended\n",
     "\n",
     "    # user_interest -> target user의 interest (0 ~ 6개)\n",
     "    user_interest = target_df[target_df['id']== idx]['recent_interest'].values[0][:]\n",
     "    \n",
-    "    # interest_article_id -> target user의 interest와 2개 이상 겹치는 글의 article_id\n",
+    "    # interest_article_id -> target user의 interest와 common_num개 이상 겹치는 글의 article_id\n",
     "    interest_article_id = []\n",
     "    for i in range(len(metadata_df)):\n",
-    "        if len(set(metadata_df['keyword_list'].values[i]) & set(user_interest)) >= 2:\n",
+    "        if len(set(metadata_df['keyword_list'].values[i]) & set(user_interest)) >= common_num:\n",
     "            interest_article_id.append(metadata_df['id'].values[i])\n",
     "\n",
     "    # 이미 본 글이나 이미 추천된 글을 제외하고 reg_ts 순으로 n_rec만큼 추천\n",
@@ -671,25 +671,12 @@
     "    \n",
     "    already = r_list + recommended\n",
     "    \n",
-    "    # candidate -> 이미 본 글이나 추천된 글을 제외하고, view가 평균보다 많은 글\n",
-    "    candidate = metadata_df[(metadata_df['id'].isin(already)==False) & (metadata_df['view'] > metadata_df['view'].mean())]\n",
+    "    # 이미 본 글이나 추천된 글을 제외하고 view 순으로 n_rec만큼 추천\n",
+    "    n_rec = 100-len(recommended)\n",
+    "    p_article = metadata_df[metadata_df['id'].isin(already)==False].sort_values(['view'],ascending=[False])\n",
+    "    popularity_based_recommend_list = p_article[:n_rec]['id'].tolist()\n",
     "    \n",
-    "    # user_interest -> target user의 interest (0 ~ 6개)\n",
-    "    user_interest = target_df[target_df['id']== idx]['recent_interest'].values[0][:]\n",
-    "    \n",
-    "    # interest_popularity_id -> target user의 interest 1개 이상 겹치는 popularity id\n",
-    "    interest_popularity_id = []\n",
-    "    for i in range(len(candidate)):\n",
-    "        if len(set(candidate['keyword_list'].values[i]) & set(user_interest)) >= 1:\n",
-    "            interest_popularity_id.append(candidate['id'].values[i])    \n",
-    "    \n",
-    "    # interest가 1개 이상 겹치는 글을 reg_ts순으로 추천하고, 남은 글은 popularity가 높은 순서대로 추천\n",
-    "    p_article = candidate[candidate['id'].isin(interest_popularity_id)].sort_values(['reg_ts'],ascending=[False])\n",
-    "    p_list = p_article[:(100-len(recommended))]['id'].tolist()\n",
-    "    if len(p_list) < (100-len(recommended)):\n",
-    "        p_list = p_list + candidate[candidate['id'].isin(p_list)==False][:(100-len(recommended)-len(p_list))]['id'].tolist()\n",
-    "\n",
-    "    return p_list"
+    "    return popularity_based_recommend_list"
    ]
   },
   {
@@ -735,24 +722,31 @@
     "        recent = target_df[target_df['id']==idx]['recent'].values[0][:]\n",
     "        f_ratio = target_df[target_df['id']==idx]['f_ratio'].values[0]\n",
     "        m_ratio = target_df[target_df['id']==idx]['m_ratio'].values[0]\n",
+    "        \n",
+    "        # popularity_based 추천\n",
+    "        p1 = popularity_based_recommend(idx, target_df, metadata_max, read_raw_df, r_list, recommended)[:5]\n",
+    "        recommended = recommended + p1\n",
     "\n",
     "        # following_based 추천\n",
-    "        f = following_based_recommend(idx, target_df, metadata_max, r_list, recommended, f_ratio)\n",
+    "        f = following_based_recommend(idx, target_df, metadata_min, r_list, recommended, f_ratio)\n",
     "        recommended = recommended + f\n",
     "\n",
     "        # magazine_based 추천\n",
-    "        m = magazine_based_recommend(idx, target_df, metadata_max, r_list, recommended)\n",
+    "        m = magazine_based_recommend(idx, target_df, metadata_min, r_list, recommended, m_ratio)\n",
     "        recommended = recommended + m\n",
     "\n",
     "        # tag_bsaed 추천\n",
-    "        t = tag_based_recommend(idx, target_df, metadata_min, r_list, recommended)\n",
-    "        recommended = recommended + t\n",
+    "        t1 = tag_based_recommend(idx, target_df, metadata_min, r_list, recommended, 2)\n",
+    "        recommended = recommended + t1\n",
+    "        \n",
+    "        t2 = tag_based_recommend(idx, target_df, metadata_min, r_list, recommended, 1)\n",
+    "        recommended = recommended + t2\n",
     "        \n",
     "        # 100개 되지 않았다면 popularity_based 추천\n",
-    "        p = []\n",
+    "        p2 = []\n",
     "        if len(recommended) < 100:\n",
-    "            p = popularity_based_recommend(idx, target_df, metadata_max, read_raw_df, r_list, recommended)\n",
-    "            recommended = recommended + p\n",
+    "            p2 = popularity_based_recommend(idx, target_df, metadata_max, read_raw_df, r_list, recommended)\n",
+    "            recommended = recommended + p2\n",
     "            \n",
     "        # 추천 리스트 맨 앞에 user_id 추가\n",
     "        recommended.insert(0, idx)                \n",
@@ -761,7 +755,11 @@
     "\n",
     "        # 진행 상황 표시\n",
     "        iteration += 1\n",
-    "        print(str(iteration).rjust(4), '/', str(len(target_list)), 'completed', '\\t', 'read:'+str(len(r_list)).rjust(5)+',', 'recent:'+str(len(recent)).rjust(5), '\\t', 'fr:'+str(int(f_ratio*100)).rjust(3)+'%,', 'mr:'+str(int(m_ratio*100)).rjust(3)+'%', '\\t', 'f:'+str(len(f)).rjust(3)+',', 'm:'+str(len(m)).rjust(3)+',', 't:'+str(len(t)).rjust(3)+',', 'p:'+str(len(p)).rjust(3), '\\t','total:'+str(len(recommended)-1))\n",
+    "        print(str(iteration).rjust(4), '/', str(len(target_list)), 'completed', '\\t', \\\n",
+    "              'read:'+str(len(r_list)).rjust(5)+',', 'recent:'+str(len(recent)).rjust(5), '\\t', \\\n",
+    "              'fr:'+str(int(f_ratio*100)).rjust(3)+'%,', 'mr:'+str(int(m_ratio*100)).rjust(3)+'%', '\\t', \\\n",
+    "              'p1:'+str(len(p1)).rjust(2)+',', 'f:'+str(len(f)).rjust(2)+',', 'm:'+str(len(m)).rjust(2)+',', \\\n",
+    "              't1:'+str(len(t1)).rjust(2)+',', 't2:'+str(len(t2)).rjust(2)+',', 'p2:'+str(len(p2)).rjust(2))\n",
     "\n",
     "\n",
     "    # 추천 리스트를 파일로 저장\n",
