--- a/BrunchRec v9.0.0.ipynb
+++ b/BrunchRec v9.0.0.ipynb
@@ -869,13 +869,13 @@
     "    # 적어도 한 번 이상 추천된 글 리스트\n",
     "    all_already = []\n",
     "    \n",
-    "    # metadata_all -> 2019.03.14 이후에 발행된 글을 제외한 metadata (629,252개)\n",
+    "    # metadata_all -> 추천 기간 이후에 발행된 글을 제외한 metadata (629,252개)\n",
     "    metadata_all = metadata_df[metadata_df['reg_ts'] < get_unix_time(20190314)]\n",
-    "    # metadata_reg -> 2018.09.15 ~ 2019.03.14 동안 발행된 글의 metadata (127,218개)\n",
+    "    # metadata_reg -> 추천 기간을 포함한 최근 6개월 동안 발행된 글의 metadata (127,218개)\n",
     "    metadata_reg = metadata_df[(metadata_df['reg_ts'] >= get_unix_time(20180915)) & (metadata_df['reg_ts'] < get_unix_time(20190314))]\n",
-    "   # metadata_pop -> 일정 기간 동안 view가 상위 20%인 글의 metadata (126,666개)\n",
+    "    # metadata_pop -> 최근 view가 상위 20%인 글의 metadata (126,666개)\n",
     "    metadata_pop = metadata_df[metadata_df['recent_view'] > metadata_df['recent_view'].quantile(0.80)]\n",
-    "    # metadata_hot -> 추천 기간 동안 발행되었고, view가 상위 20%인 글의 metadata (5,011개)\n",
+    "    # metadata_hot -> 추천 기간 동안 발행되었고, 최근 view가 상위 20%인 글의 metadata (5,011개)\n",
     "    metadata_hot = metadata_df[(metadata_df['recent_view'] > metadata_df['recent_view'].quantile(0.80)) & ((metadata_df['reg_ts'] >= get_unix_time(20190222)))]\n",
     " \n",
     "    \n",
