--- a/BrunchRec v9.0.0.ipynb
+++ b/BrunchRec v9.0.0.ipynb
@@ -21681,8 +21681,8 @@
     }
    ],
    "source": [
-    "# 사용자의 글 소비 경향 및 추천 글 top 30개 출력\n",
-    "idx_num = 0   # 0 ~ 2999 또는 0~4999 입력\n",
+    "# target user의 article 소비 경향 및 추천 글 top 30개 출력\n",
+    "idx_num = 0   # 0~4999 입력 (dev의 경우, 0 ~ 2999)\n",
     "recommend_result(recommend, idx_num, test, metadata)"
    ]
   },
